tasksapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasksapp-ingress
  labels:
    name: tasksapp-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tasksapp-svc
            port: 
              number: 8080
